fixtures/fmt/ok/const_multiline.sans
# sans 0.1
const {
	a = 1,
	b = "x",
}
