fixtures/fmt/bad/bad_expr_equals.sans
# sans 0.1
assert a = 1
